# telegram-cli

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  HARNESS.md  plans.md  product.md
.memory/decisions/: decisions.md
.memory/logs/: work.md
.memory/problems/: problems.md
.memory/raw/: 2026-07-15-p1-runtime-acceptance.md  2026-07-15-p2-daemon-lifecycle-acceptance.md  2026-07-15-p3-rust-bindings-evaluation.md  2026-07-15-planning-taxonomy-removal.md  2026-07-15-project-bootstrap.md  2026-07-15-tdjson-transport-native-smoke.md  2026-07-15-tdlib-1.8.66-native-linux-x86_64.md  2026-07-15-tdlib-1.8.66-native-macos-arm64-reviewed-rebuild.md  2026-07-15-tdlib-1.8.66-native-macos-arm64.md  2026-07-15-tdlib-1.8.66-schema-pin.md  2026-07-15-tdlib-add-chat-member-overclaim-correction.md  2026-07-15-tdlib-capability-evidence-baseline.md  2026-07-15-tdlib-capability-generator-foundation.md  2026-07-15-tdlib-chat-boost-link-non-gate.md  2026-07-15-tdlib-chat-boost-list-capability.md  2026-07-15-tdlib-chat-event-log-capability.md  2026-07-15-tdlib-chat-gift-notification-capability.md  2026-07-15-tdlib-chat-invite-link-counts-capability.md  2026-07-15-tdlib-chat-invite-link-creation-capabilities.md  2026-07-15-tdlib-chat-kind-capability.md  2026-07-15-tdlib-chat-setting-right-capabilities.md  2026-07-15-tdlib-database-key-codec.md  2026-07-15-tdlib-delete-chat-messages-by-sender-correction.md  2026-07-15-tdlib-delete-recent-reactions-by-sender-capability.md  2026-07-15-tdlib-feature-owner-corpus.md  2026-07-15-tdlib-feature-owner-generator.md  2026-07-15-tdlib-group-call-capabilities.md  2026-07-15-tdlib-message-properties-capabilities.md  2026-07-15-tdlib-runtime-boolean-options.md  2026-07-15-tdlib-runtime-signal-dispositions.md  2026-07-15-tdlib-schema-parser-inventory.md  2026-07-15-tdlib-supergroup-flag-capabilities.md  2026-07-15-tdlib-supergroup-full-info-capabilities.md  2026-07-15-tdlib-supergroup-setting-ordinary-kind-correction.md  2026-07-15-tdlib-supergroup-setting-right-capabilities.md  2026-07-15-tdlib-supergroup-username-owner-capabilities.md  2026-07-15-tdlib-unpin-chat-message-overclaim-correction.md  (+18 more)
.memory/wiki/: index.md  project-state.md
apps/telegram-cli/: Cargo.toml
apps/telegram-cli/src/: login.rs  main.rs
apps/telegram-cli/src/login/: tests.rs
apps/telegram-mcp/: Cargo.toml
apps/telegram-mcp/src/: main.rs
apps/telegram-webapp-runner/: Cargo.toml
apps/telegram-webapp-runner/src/: main.rs
apps/telegramd/: Cargo.toml
apps/telegramd/src/: authorization.rs  chat_inputs.rs  config.rs  identity.rs  lease.rs  lifecycle.rs  main.rs  ownership.rs  scheduler.rs  server.rs  socket.rs  telemetry.rs  workflow_catalog.rs
apps/telegramd/src/authorization/: tests.rs
crates/telegram-core/: Cargo.toml
crates/telegram-core/src/: approval.rs  authorization.rs  database_key.rs  feature.rs  idempotency.rs  lib.rs  method_capability.rs  raw_api.rs  reducer.rs  registry.rs  retry.rs  runtime.rs  schema.rs  tdjson_native.rs  transport.rs  workflows.rs
crates/telegram-core/src/authorization/: tests.rs
crates/telegram-core/src/feature/: tests.rs
crates/telegram-core/src/method_capability/: tests.rs
crates/telegram-core/src/raw_api/: tests.rs
crates/telegram-core/src/registry/: generated.rs  tests.rs
crates/telegram-core/src/schema/: tests.rs
crates/telegram-core/src/workflows/: bot.rs  business.rs  call.rs  chat.rs  chat_folder_tests.rs  files.rs  forum.rs  members.rs  message.rs  mod.rs  proxy.rs  session.rs  stars.rs  sticker.rs  story.rs  user.rs  webapp.rs
docs/: account-settings-workflow.md  agent-skill-eval.md  authorization-guide.en.md  authorization-guide.ru.md  authorization-state-machine.md  bot-testing-workflow.md  business-workflow.md  capability-notes.md  chat-administration-workflow.md  chat-inspection-workflow.md  chat-list-loading.md  chat-resolution-membership.md  cli-login-events.md  cli-output-contract.md  cli-schema-call.md  cli-secure-login.md  cli-session.md  cli-streaming.md  cli-workflows.md  core-raw-api.md  core-runtime-startup.md  daemon-leases.md  daemon-profile-ownership.md  daemon-profile-socket.md  daemon-scheduler.md  daemon-session-lifecycle.md  database-encryption-key.md  external-plan-approval.md  file-transfer-workflow.md  forum-topic-workflow.md  idempotency-journal.md  live-regression.md  mcp-transport.md  members-statistics-workflow.md  message-pagination.md  message-workflow.md  mini-app-handoff.md  ordered-state-reducer.md  platform-utilities-workflow.md  stars-payment-workflow.md  (+13 more)
policy/: tdlib-feature-owners.json
scripts/: build-tdlib-linux-native.py  build-tdlib-native.py  check-core-secret-output.py  check-daemon-client-single-home.py  check-planning-boundary.py  check-skeleton-fails-closed.py  check-source-file-size.py  check-tdlib-native-pin.py  check-tdlib-pin.py  check-tdlib-registry.py  check-workspace-boundaries.py  check-workspace-dependencies.py  inspect-tdlib-linux-native.py  process-group-target-gate.py  process-group-watchdog.py  rotate-wiki-journal.py  smoke-tdlib-native.py  tdlib_linux_native.py  tdlib_native.py  test-daemon-client-single-home.py  test-rotate-wiki-journal.py  test-skeleton-process-guard.py  test-source-file-size.py  test-tdlib-native-build-guards.py  test-tdlib-native-commit-provenance.py  test-tdlib-native-input-snapshots.py  test-tdlib-native-inspection-parent-death.py  test-tdlib-native-parent-death-guard.py  test-tdlib-native-stale-work-recovery.py  test-tdlib-pin-guards.py  test-workspace-dependencies.py  vendor-tdlib-schema.py  with-env-local.sh
tools/tdlib-registry-gen/: Cargo.toml  capabilities.json
tools/tdlib-registry-gen/src/: app.rs  capability.rs  engine.rs  lib.rs  main.rs
tools/tdlib-registry-gen/src/app/: corpus_tests.rs  tests.rs
tools/tdlib-registry-gen/src/capability/: chat_boosts.rs  chat_event_logs.rs  chat_invite_links.rs  chat_settings.rs  message_moderation.rs  supergroup_settings.rs  supergroup_usernames.rs  tests.rs  video_chat_streaming.rs  video_chats.rs
tools/tdlib-registry-gen/src/engine/: corpus_tests.rs  tests.rs
(+183 files in other folders)
