[workspace]
resolver = "2"
members = [
    "apps/telegram-cli",
    "apps/telegram-mcp",
    "apps/telegram-webapp-runner",
    "apps/telegramd",
    "crates/telegram-client",
    "crates/telegram-core",
    "crates/telegram-protocol",
    "tools/tdlib-registry-gen",
]
default-members = [
    "apps/telegram-cli",
    "apps/telegram-webapp-runner",
    "apps/telegramd",
    "crates/telegram-client",
    "crates/telegram-core",
    "crates/telegram-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
libc = "0.2.174"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
telegram-client = { path = "crates/telegram-client" }
telegram-core = { path = "crates/telegram-core" }
telegram-protocol = { path = "crates/telegram-protocol" }
zeroize = "1.9.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
