[package]
name = "telegram-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
libc.workspace = true
serde_json.workspace = true
telegram-client.workspace = true
telegram-protocol.workspace = true
zeroize.workspace = true
