[package]
name = "telegram-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
libc = "0.2.174"
rmcp = { version = "=2.2.0", default-features = false, features = ["server", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
telegram-protocol = { path = "../../crates/telegram-protocol" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
