[package]
name = "telegram-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rmcp = { version = "=2.2.0", default-features = false, features = ["server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
telegram-client.workspace = true
telegram-protocol.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
