[package]
name = "telegram-webapp-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
telegram-client = { path = "../../crates/telegram-client" }
telegram-protocol = { path = "../../crates/telegram-protocol" }
zeroize = "1.9.0"
