[package]
name = "telegramd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
libc = "0.2.174"
telegram-core = { path = "../../crates/telegram-core" }
telegram-protocol = { path = "../../crates/telegram-protocol" }
