[package]
name = "telegramd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
telegram-core.workspace = true
telegram-protocol.workspace = true
zeroize.workspace = true
