[package]
name = "telegram-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
ed25519-dalek = "3.0.0"
libc = "0.2.174"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
zeroize = "1.9.0"
