[package]
name = "tdlib-registry-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
telegram-core = { path = "../../crates/telegram-core" }
